--- a/paginapraticafinal.html
+++ b/paginapraticafinal.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="CSS/stile.css">
     <title>Inicio de pagina de arte</title>
 </head>
 
